--- a/requirements.txt
+++ b/requirements.txt
@@ -29,8 +29,10 @@ jiter==0.9.0
 lxml==5.4.0
 markdown-it-py==3.0.0
 markupsafe==3.0.2
+mcp
 mdurl==0.1.2
 multitasking==0.0.11
+nest-asyncio
 numpy==2.2.5
 openai==1.78.0
 pandas==2.2.3
